# awaiting-death

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  conftest.py  docker-compose.yml  makefile  pyproject.toml  pytest.ini
accounts/: forms.py  urls.py  views.py
accounts/tests/: test_auth.py
api/: routers.py  serializers.py  viewsets.py
archives/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  urls_user.py  utils.py  views.py  views_user.py
archives/api/: serializers.py  urls.py  views.py
archives/business/: stats.py
archives/migrations/: 0001_initial.py  0002_archive_deleted_at.py  0002_archive_ready_archive_zip_file.py  0003_alter_archive_created_at_alter_archive_description_and_more.py  0003_alter_archive_owner.py  0004_alter_clicklog_timestamp.py  0004_archive_qr_image.py  0005_alter_archive_password.py  0005_archive_owner_alter_archive_description.py  0006_alter_archive_expires_at.py  0006_archive_name.py  0007_archive_error.py  0008_archive_build_task_id.py
archives/models/: archive.py  click_log.py  file_item.py
archives/services/: download.py  stats.py  upload.py
archives/templates/: base.html  dashboard.html  download.html  home.html  preview.html  stats.html  upload.html  wait.html
archives/tests/: conftest.py  test_api.py  test_api_stats.py  (+19 more)
config/: celery.py  middleware.py  settings.py  urls.py
k8s/: cron-cleanup.yaml  db.yaml  django-secret.example.yaml  ingress.yaml  postgres.yaml  redis.yaml  web-config.yaml  web.yaml  worker.yaml
templates/: base.html
(+61 files in other folders)
